test/scc/stmt/semantic-errors/048.t
int test()
{
    void* b;
    return b;
}